<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RT3 - Ultimate Tic Tac Toe</string>
    <string name="settings">Settings</string>
    <string name="undo">Undo</string>
    <string name="newGame">New game</string>
    
    <string name="corrupted">Savegame is corrupted and cleared.</string>
    <string name="corrupted2">Savegame is corrupted and readonly. Good luck.</string>
    <string name="gameEnded">Last game has ended.</string>
    
    <string name="game_mode">Game mode:</string>
    <string name="PvE">Human vs. AI</string>
    <string name="PvP">2-Player</string>
    
    <string name="choose_piece">Choose your piece:</string>
    <string name="going_first">Going first?</string>
    <string name="lazy_desc">X goes first.</string>
    
    <string name="human">Human</string>
    <string name="AI">AI</string>
    <string name="P1">Player 1</string>
    <string name="P2">Player 2</string>
    
    <string name="procrastinating">Bot is thinking…</string>
    <string name="turn">turn</string>
    <string name="win">win!</string>
    <string name="tie">It\'s a tie!</string>
    
    <string name="difficulty">AI difficulty:</string>
    <string name="easy">Easy</string>
    <string name="easy_desc">Way too easy.</string>
    <string name="medium">Medium</string>
    <string name="medium_desc">Bot actually thinks.</string>
    <string name="hard">Hard</string>
    <string name="hard_desc">Bot takes 5 seconds to think.</string>

</resources>
