<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/settings_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/settings_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/noOfPlayersOptions"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/noOfPlayersDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/game_mode" />

                <ToggleButton
                    android:id="@+id/settings_2PButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textOff="@string/PvP"
                    android:textOn="@string/PvE" />
            </LinearLayout>

            <TextView
                android:id="@+id/lazyDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lazy_desc"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/AIOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/goingFirstLinearLayout"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/goingFirstTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/going_first" />

                    <ToggleButton
                        android:id="@+id/settings_AIButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="@string/human"
                        android:textOn="@string/AI" />
                </LinearLayout>

                <TextView
                    android:id="@+id/botDifficultyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/difficulty" />

                <RadioGroup
                    android:id="@+id/settings_difficultyGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/settings_easyButton"
                        style="?android:attr/buttonStyleToggle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="?android:attr/listChoiceBackgroundIndicator"
                        android:checked="false"
                        android:text="@string/easy" />

                    <RadioButton
                        android:id="@+id/settings_mediumButton"
                        style="?android:attr/buttonStyleToggle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="?android:attr/listChoiceBackgroundIndicator"
                        android:checked="true"
                        android:text="@string/medium" />

                    <RadioButton
                        android:id="@+id/settings_hardButton"
                        style="?android:attr/buttonStyleToggle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="?android:attr/listChoiceBackgroundIndicator"
                        android:checked="false"
                        android:text="@string/hard" />

                </RadioGroup>

                <TextView
                    android:id="@+id/botDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/settings_newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newGame" />

</LinearLayout>